--- a/crates/s3s/Cargo.toml
+++ b/crates/s3s/Cargo.toml
@@ -52,6 +52,8 @@ tracing = "0.1.37"
 transform-stream = "0.3.0"
 urlencoding = "2.1.3"
 zeroize = "1.6.0"
+futures-core = "0.3.30"
+futures-io = "0.3.30"
 
 [dev-dependencies]
 tokio = { version = "1.31.0", features = ["full"] }
